force-app/main/default/objects/Trip__c/fields/number_of_participants__c.field-meta.xml
<CustomField>
    <fullName>number_of_participants__c</fullName>
    <label>number of participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>