force-app/main/default/objects/Trip__c/validationRules/CompteExistant.validationRule-meta.xml
<ValidationRule>
    <fullName>CompteExistant</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISBLANK(Account__c), NOT($Permission.IsAdmin))</errorConditionFormula>
    <errorMessage>Un voyage doit toujours avoir un compte associé</errorMessage>
</ValidationRule>