force-app/main/default/objects/Trip__c/validationRules/NombreDeParticipantsPositif.validationRule-meta.xml
<ValidationRule>
    <fullName>NombreDeParticipantsPositif</fullName>
    <active>true</active>
    <errorConditionFormula>number_of_participants__c &lt; 0</errorConditionFormula>
    <errorMessage>Le nombre de participants doit être supérieur ou égal a 1</errorMessage>
</ValidationRule>