force-app/main/default/objects/Trip__c/validationRules/OpportuniteExistante.validationRule-meta.xml
<ValidationRule>
    <fullName>OpportuniteExistante</fullName>
    <active>true</active>
    <errorConditionFormula>Opportunity__c == null</errorConditionFormula>
    <errorMessage>Le voyage doit toujours avoir une opportunité associée.</errorMessage>
</ValidationRule>