force-app/main/default/objects/Trip__c/validationRules/TotalCostPositif.validationRule-meta.xml
<ValidationRule>
    <fullName>TotalCostPositif</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Cost__c  &lt; 0</errorConditionFormula>
    <errorMessage>Le coût total doit toujours être supérieur à 0.</errorMessage>
</ValidationRule>